# my-granular-certificate-registry

./: .env  .env.example  .env.production  .gitignore  ARCHITECTURE.md  Dockerfile  HOW_TO_RUN.md  Makefile  OPEN_CODE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STEP_BY_STEP.md  api_service.yaml  api_service_app_engine.yml  compose.yml  create_admin.py  create_user_endpoint.py  crontab  entrypoint.sh  netlify.toml  pyproject.toml  quick_demo.py  requirements.txt  seed_production.py  setup.py  start.sh
.eventstore/: README.md  docker-compose.yml
docs/: DEVELOPMENT.md
examples/: example_usage.py  generate_sample_data.py  sample_data.csv
frontend/: .env.production  Dockerfile  frontend_service.yaml  frontend_service_app_engine.yml  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  AppRoutes.js  example_data.js
frontend/src/api/: authAPI.js  baseAPI.js  certificateAPI.js  completeMockAPI.js  measurementAPI.js  mockAPI.js  storageAPI.js
frontend/src/components/: Dashboard.js
frontend/src/components/Certificate/: CertificateActionDialog.js  CertificateDetailDialog.js  CertificateImportDialog.js  Summary.js  index.js
frontend/src/components/Common/: FilterTable.js  SideMenu.js  (+1 more)
frontend/src/public/: index.html
frontend/src/utils/: index.js
gc_registry/: demo_page.py  emergency_user.py  issuance-task.sh  issuance_job.yml  main.py  seed.py  seed_endpoint.py  settings.py  utils.py
gc_registry/account/: models.py  routes.py  services.py  validation.py
gc_registry/authentication/: models.py  routes.py  schemas.py  services.py
gc_registry/certificate/: issuance_task.py  routes.py  schemas.py  services.py  validation.py
gc_registry/core/: error_handling.py  services.py
gc_registry/core/database/: cqrs.py  db.py
gc_registry/core/models/: base.py
gc_registry/device/: models.py  schemas.py  services.py
gc_registry/measurement/: models.py  routes.py  schemas.py  validation.py
gc_registry/notebooks/: demo_notebook.ipynb  quintrace_pilot_demo.ipynb
gc_registry/static/templates/: gc_import_template.csv  storage_allocation_template.csv  storage_readings_template.csv
gc_registry/storage/: models.py  routes.py  schemas.py  services.py  utils.py  validation.py
gc_registry/tasks/: issuance-task.sh
gc_registry/tests/: conftest.py  test_cqrs.py
gc_registry/tests/account/: test_account_routes.py  test_account_services.py
gc_registry/tests/auth/: test_api_key_routes.py  test_auth_routes.py  test_auth_services.py
gc_registry/tests/certificate/: test_certificate_routes.py  test_certificate_services.py
gc_registry/tests/device/: test_device_services.py
gc_registry/tests/measurement/: test_measurement_routes.py
gc_registry/tests/storage/: bess_plant_activity_sep_2024.csv  bess_soc_estimation.ipynb  test_storage_routes.py
gc_registry/tests/user/: test_user_routes.py
gc_registry/user/: models.py  routes.py  schemas.py  services.py  validation.py
granular_certificate_registry/: __init__.py  api.py  models.py  processor.py  registry.py  trading.py  validator.py
tests/: test_system.py
(+42 files in other folders)
